correction contrast 1

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-	color: rgba(255, 255, 255, 0.6);
+	color: #ffffff;
 }
 
 .d-bloc .a-btn:hover,
@@ -763,7 +763,7 @@ h4 {
 }
 
 .black-background {
-	background-color: rgba(165, 147, 99, 0.7);
+	background-color: rgba(165, 147, 99, 0.85);
 	padding: 40px 40px 40px 40px;
 }
 
